--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ body {
   border-radius: 7px;
   overflow: hidden;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
 }
 .product-info {
   padding: 20px;
